--- a/assets/sass/pages/_index.scss
+++ b/assets/sass/pages/_index.scss
@@ -6,14 +6,21 @@
     box-sizing: border-box;
 
 }
+html{
+}
 body{
+    font-family:Inter,"sans-serif";
     overflow-x: hidden;
+    background-color: #0F0D1E;
 }
 
 
 nav{
     // display: flex;
     .nav{
+        position: fixed;
+        z-index: 1;
+        width: 100%;
 
         height: 96px;
     background-color:#0F0D1E ;
@@ -28,9 +35,14 @@ nav{
             
             .img_logo{
                 // width: 100%;
+                
                 margin: 0 auto;
                 padding-top: 20px;
                 img{
+                    @media screen and (max-width:1000px) {
+                        // margin-left: 10px;
+                        margin: 0;
+                    }
                     width: 100%;
                 }
             }
@@ -48,11 +60,12 @@ nav{
                 position: absolute;
                 right: 0;
                 // top: 100%;
-                height:100%;
+                height:max-content;
                 transform: translateY(-100%);
                 transition: transform 0.5s ease-in-out;
-                background-color: red;
+                background-color: rgb(22, 1, 211);
                 opacity: -1;
+                overflow: visible;
             }
             .links{
                 .links_ul{
@@ -106,10 +119,11 @@ nav{
                             }
                         }
                     }
-                    @media screen and (max-width:1000px) {
-                        display: flex;
-                        flex-direction: column;
-                    }
+                    // @media screen and (max-width:1000px) {
+                    //     display: flex;
+                    //     flex-direction: column;
+                    //     // margin-bottom: 5px;
+                    // }
                     .h_w1{
                         // margin-right: 15px;
                         margin-left: 44px;
@@ -141,6 +155,7 @@ nav{
                                    margin-left: -20px;
 
                          .hw_ul_li{
+                        
                                 white-space: nowrap;
                                    margin-bottom: 12px;
                                    font-size: 16px;
@@ -182,7 +197,7 @@ nav{
                         
 
                         @media screen and (max-width:1000px) {
-                            margin-bottom: 10px;
+                            // margin-bottom: 10px;
                         }
                             a{
                         &:hover{
@@ -249,7 +264,7 @@ nav{
                 display: block;
                 text-align: end;
             padding-top:30px;
-            margin-right: 100px;
+            // margin-right: 100px;
             position: relative;
             z-index: 1;
             }
@@ -261,11 +276,17 @@ nav{
     }
 }
 
-.right-side.activeburger{
-    transform: translateY(150%);
-    background-color: #66E7D8;
-opacity: 1;
-}
+// .right-side.activeburger{
+//     transform: translateY(150%);
+//     background-color: #1B1734;
+//     opacity: 1;
+//     color: wheat;
+//     @media screen and (max-width:1000px) {
+//         width: 100%;
+
+        
+//     }
+// }
 
 
 
@@ -283,13 +304,16 @@ header{
         color: wheat;
         .section-1_hea{
             .row_hea{
+                // margin-bottom: 200px;
                 .left_side_hea{
-                    padding: 0;
-                    margin: 0;
-                    margin-top: 100px;
+
+                    
+                    margin-top: 230px;
+                    margin-bottom: 150px;
                     .heading-hero-homepage_hea{
                         font-size: 48px;
                         line-height: 140%;
+                        font-weight: 600;
                     }
                     .night40_hea{
                         font-size: 19px;
@@ -322,12 +346,21 @@ margin-bottom: 100px;
             width: 100px;
             height:30px ;
             margin-right: 20px;
+
                     }
                 }
                 .right_side_hea{
-                    margin-top: 100px;
+                    position: relative;
+                    margin-top: 230px;
+
                     .img_right_hea{
                         width: 100%;
+                    }
+                    .back-img-hea{
+                        position: absolute;        
+                        bottom: 0px;
+                        right: 0px;
+                        width: 119%;
                     }
                 }
             }
@@ -335,10 +368,11 @@ margin-bottom: 100px;
     
     }
     @media screen and (max-width:1200px){
-        // body{
-        //     padding: 0;
-        //     margin: 0
-        // }
+        body{
+            font-family:Inter,"sans-serif";
+            overflow-x: hidden;
+            background-color: #0F0D1E;
+        }
         header{
             position: relative;
             background-color: #0F0D1E;
@@ -348,9 +382,9 @@ margin-bottom: 100px;
                     display: flex;
                     flex-wrap: nowrap;
                     .left_side_hea{
-                        // padding: 0;
-                        // margin: 0;
-                        margin-top: 100px;
+                        margin-bottom: 200px;
+                        
+                        margin-top: 230px;
                         // visibility: hidden;
                         .heading-hero-homepage_hea{
                             font-size: 45px;
@@ -390,16 +424,30 @@ margin-bottom: 100px;
                         }
                     }
                     .right_side_hea{
-                        margin-top: 100px;
+                margin-bottom: 100px;
+
+                        
+                        position: relative;
+                        margin-top: 230px;
                         .img_right_hea{
                             width: 100%;
                         }
+                       .back-img-hea{
+                        position: absolute;        
+                        bottom: 0px;
+                        right: 0px;
+                        // width: 119%;
+
+                        }
                     }
                 }
+                // background-image: url("/assets/image/back.png");
+
             }
         
         }
     } 
+    
     // @media screen and (max-width:1100px){
     //     header{
     //         position: relative;
@@ -462,15 +510,14 @@ margin-bottom: 100px;
         
     //     }
     // }
-    @media screen and (max-width:1100px){
-        body{
-            margin: 0;
-            padding: 0;
-
-        }
+     
         
-    }
     @media screen and (max-width:992px){
+        body{
+            font-family:Inter,"sans-serif";
+            overflow-x: hidden;
+            background-color: #0F0D1E;
+        }
         header{
             position: relative;
             background-color: #0F0D1E;
@@ -480,9 +527,8 @@ margin-bottom: 100px;
                     display: flex;
                     flex-wrap: wrap;
                     .left_side_hea{
-                      
                         margin-top: 100px;
-                        // visibility: hidden;
+                        margin-bottom: 200px;
                         .heading-hero-homepage_hea{
                             font-size: 45px;
                             line-height: 140%;
@@ -532,10 +578,361 @@ margin-bottom: 100px;
         
         }
     }
+////////////////header end//////////
 
 
+/////////section 2////////////////
+.section-2.after_header{
+        background-color:#1B1734;
+        color: white;
+       
+        .ah_row1{
+            margin-left: 20px;
+        }
+        .ah_col1{
+        }
+        .heading.small{
+            margin-top: 140px;
+            font-size: 33px;
+            font-weight: 600;
+            line-height: 140%;
+            text-align: left;
+        }
+        .paragraph{
+            margin-right: 40px;
+            padding: 0;
+            margin-top: 120px;
+            justify-content: space-between;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 300;
+            text-align: left;
+            line-height: 150%;
+        }
+        .o_p_t{
+            .section-2-secondside{
+                width: 98%;
+                background-color:#5B35D5 ;
+                border-radius: 16px;
+                margin-top: 150px;
+                margin-right: 20px;
+                margin-bottom: 130px;
+                .left-side_sc2{
+                padding-left: 60px;
+                padding-top: 200px;
+                }
+                .heading-callout{
+                    font-size: 40px;
+                    font-weight: 600;
+                }
+                .paragraph-left{
+                    justify-content: space-between;
+                    font-size: 18px;
+                    font-weight: 300;
+                    // margin-bottom: 400px;
+                }
+                .section-2-right-img{
+                    display: inline-block;
+                    width: 78%;
+                    // height: 88%;
+                    margin-left:90px ;
+                    // margin-right: 20px;
+                    margin-top: 60px;
+                    margin-bottom: 50px;
+                    
+                }
+        
+        
+        
+            }
+        }
+    }
+
+    @media screen and (max-width:1200px) {
+        .section-2.after_header{
+          
+            .ah_row1{
+                margin-left: 40px;
+                margin-right: 40px;
+            }
+            .ah_col1{
+                padding: 0;
+            }
+            .heading.small{
+                margin-top: 140px;
+                font-size: 45px;
+                font-weight: 600;
+                line-height: 140%;
+                text-align: left;
+            }
+            .paragraph{
+                padding: 0;
+                margin-top: 120px;
+                justify-content: space-between;
+                color: #fff;
+                font-size: 18px;
+                font-weight: 300;
+                text-align: left;
+                line-height: 150%;
+            }
+            .o_p_t{
+                .section-2-secondside{
+                    width: 98%;
+                    background-color:#5B35D5 ;
+                    border-radius: 16px;
+                    margin: 0;
+                    margin-top: 160px;
+                margin-bottom: 130px;
+            
+                    
+                   
+                    .heading-callout{
+                        font-size: 40px;
+                        font-weight: 600;
+                    }
+                    .paragraph-left{
+                        justify-content: space-between;
+                        font-size: 18px;
+                        font-weight: 300;
+                    }
+                    .section-2-right-img{
+                        display: inline-block;
+                        width: 78%;
+                        height: 88%;
+                        margin-left:90px ;
+                        // margin-right: 20px;
+                        margin-top: 60px;
+                        margin-bottom: 50px;
+                        
+                    }
+            
+            
+            
+                }
+            }
+        }
+    }
+    @media screen and (max-width:992px) {
+
+        .section-2.after_header{
+            
+     
+            .ah_row1{
+                margin-left: 20px;
+            }
+            .ah_col1{
+                padding: 0;
+            }
+            .heading.small{
+                font-size: 34px;
+                font-weight: 600;
+            }
+            .paragraph{
+                // padding: 0;
+                margin-top: 120px;
+                // padding-left: 210px;
+                justify-content: space-between;
+                color: #fff;
+                font-size: 18px;
+                font-weight: 300;
+                text-align: left;
+                line-height: 150%;
+            }
+            .o_p_t{
+                .section-2-secondside{
+                    width: 98%;
+                    background-color:#5B35D5 ;
+                    border-radius: 16px;
+                    margin: 0;
+                    margin-top: 160px;
+                margin-bottom: 130px;
+
+                    .left-side_sc2{
+                        padding-left: 30px;
+                        padding-top: 60px;
+                        }
+                    .heading-callout{
+                        font-size: 27px;
+                        font-weight: 600;
+                    }
+                    .paragraph-left{
+                        justify-content: space-between;
+                        font-size: 18px;
+                        font-weight: 300;
+                    }
+                    .section-2-right-img{
+                        display: inline-block;
+                        width: 90%;
+                        // height: 88%;
+                        margin-left:35px ;
+                        // margin-right: 20px;
+                        margin-top: 60px;
+                        margin-bottom: 50px;
+                }
+            }
+        
+        
+        
+            }
+        }
+    }
+            
+
+    @media screen and (max-width:992px) {
+
+        .section-2.after_header{
+            
+     
+            .ah_row1{
+                margin-left: 20px;
+            }
+            .ah_col1{
+                padding: 0;
+            }
+            .heading.small{
+                font-size: 34px;
+                font-weight: 600;
+            }
+            .paragraph{
+                // padding: 0;
+                margin-top: 120px;
+                // padding-left: 210px;
+                justify-content: space-between;
+                color: #fff;
+                font-size: 18px;
+                font-weight: 300;
+                text-align: left;
+                line-height: 150%;
+            }
+            .o_p_t{
+                .section-2-secondside{
+                    width: 98%;
+                    background-color:#5B35D5 ;
+                    border-radius: 16px;
+                    margin: 0;
+                    margin-top: 160px;
+                margin-bottom: 130px;
+
+                    .left-side_sc2{
+                        padding-left: 30px;
+                        padding-top: 60px;
+                        }
+                    .heading-callout{
+                        font-size: 27px;
+                        font-weight: 600;
+                    }
+                    .paragraph-left{
+                        justify-content: space-between;
+                        font-size: 18px;
+                        font-weight: 300;
+                    }
+                    .section-2-right-img{
+                        display: inline-block;
+                        width: 90%;
+                        // height: 88%;
+                        margin-left:35px ;
+                        // margin-right: 20px;
+                        margin-top: 60px;
+                        margin-bottom: 50px;
+                }
+            }
+        
+        
+        
+            }
+        }
+    }
+
+    @media screen and (max-width:768px) {
+
+        .section-2.after_header{
+            
+     
+            .ah_row1{
+                margin-left: 20px;
+            }
+            .ah_col1{
+                padding: 0;
+            }
+            .heading.small{
+                font-size: 34px;
+                font-weight: 600;
+            }
+            .paragraph{
+                // padding: 0;
+                margin-top: 120px;
+                // padding-left: 210px;
+                justify-content: space-between;
+                color: #fff;
+                font-size: 18px;
+                font-weight: 300;
+                text-align: left;
+                line-height: 150%;
+            }
+            .o_p_t{
+                .section-2-secondside{
+                    width: 98%;
+                    background-color:#5B35D5 ;
+                    border-radius: 16px;
+                    margin: 0;
+                    margin-top: 160px;
+                margin-bottom: 130px;
+
+                    .left-side_sc2{
+                        padding-left: 30px;
+                        padding-top: 60px;
+                        }
+                    .heading-callout{
+                        font-size: 32px;
+                        font-weight: 600;
+                    }
+                    .paragraph-left{
+                        justify-content: space-between;
+                        font-size: 18px;
+                        font-weight: 300;
+                    }
+                    .section-2-right-img{
+                        display: inline-block;
+                        width: 100%;
+                        // height: 88%;
+                        margin-left:35px ;
+                        // margin-right: 20px;
+                        margin-top: 60px;
+                        margin-bottom: 60px;
+                }
+            }
+        
+        
+        
+            }
+        }
+    }
+//////////section2 end/////////////////////////
+
+///////////section3 //////////////////////////////
+
+.section3-four-part{
+    .section3-fr{
+        .asd_fr{
+            // display: flex;
+            // justify-content: center;
+            // text-align: center;
+            margin: 0 auto;
+            width: 95%;
+            background-color:#173322 ;
+            border-radius: 16px;
+            // padding: 50px;
+            margin-bottom: 100px;
+            margin-top: 130px;
+            color:white;
+            .sec_fr{
+
+            }
 
 
+        }
+    }
+}
 
 
 
@@ -561,10 +958,10 @@ margin-bottom: 100px;
 //     position: relative;
     
 //         .back-img{
-//             position: absolute;
-//             bottom: 0px;
-//             right: 0px;
-//             width: 60%;
+            // position: absolute;
+            // bottom: 0px;
+            // right: 0px;
+            // width: 60%;
 //         }
 //         .book{
 //             width: 100px;
@@ -628,7 +1025,7 @@ margin-bottom: 100px;
 //     }
 
 // }
-//globo
+
 // .section-2{
 //     background-color:#1B1734;
 //     color: white;
