--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15470,9 +15470,14 @@ a {
   box-sizing: border-box; }
 
 body {
-  overflow-x: hidden; }
+  font-family: Inter,"sans-serif";
+  overflow-x: hidden;
+  background-color: #0F0D1E; }
 
 nav .nav {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
   height: 96px;
   background-color: #0F0D1E; }
   nav .nav .sd {
@@ -15483,6 +15488,9 @@ nav .nav {
       padding-top: 20px; }
       nav .nav .sd .left_side .img_logo img {
         width: 100%; }
+        @media screen and (max-width: 1000px) {
+          nav .nav .sd .left_side .img_logo img {
+            margin: 0; } }
     nav .nav .sd .right_side.activeburger {
       transform: translateY(27%);
       opacity: 1;
@@ -15492,11 +15500,12 @@ nav .nav {
       nav .nav .sd .right_side {
         position: absolute;
         right: 0;
-        height: 100%;
+        height: max-content;
         transform: translateY(-100%);
         transition: transform 0.5s ease-in-out;
-        background-color: red;
-        opacity: -1; } }
+        background-color: #1601d3;
+        opacity: -1;
+        overflow: visible; } }
     nav .nav .sd .right_side .links .links_ul {
       display: flex; }
       nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource {
@@ -15537,10 +15546,6 @@ nav .nav {
             nav .nav .sd .right_side .links .links_ul .sub_menu.links_ul_li.resc .dropdwn12.resource .res_ul .res_ul_li .a-hover {
               color: #222;
               font-weight: normal; }
-      @media screen and (max-width: 1000px) {
-        nav .nav .sd .right_side .links .links_ul {
-          display: flex;
-          flex-direction: column; } }
       nav .nav .sd .right_side .links .links_ul .h_w1 {
         margin-left: 44px; }
       nav .nav .sd .right_side .links .links_ul .sub_menu .ox {
@@ -15584,9 +15589,6 @@ nav .nav {
           background-color: #1B1734;
           border-radius: 4px;
           cursor: pointer; }
-        @media screen and (max-width: 1000px) {
-          nav .nav .sd .right_side .links .links_ul .links_ul_li {
-            margin-bottom: 10px; } }
         nav .nav .sd .right_side .links .links_ul .links_ul_li a:hover {
           color: white; }
       nav .nav .sd .right_side .links .links_ul .buttons_nav {
@@ -15624,14 +15626,8 @@ nav .nav {
           display: block;
           text-align: end;
           padding-top: 30px;
-          margin-right: 100px;
           position: relative;
           z-index: 1; } }
-
-.right-side.activeburger {
-  transform: translateY(150%);
-  background-color: #66E7D8;
-  opacity: 1; }
 
 .active7 {
   visibility: visible !important;
@@ -15644,12 +15640,12 @@ header {
   background-color: #0F0D1E;
   color: wheat; }
   header .section-1_hea .row_hea .left_side_hea {
-    padding: 0;
-    margin: 0;
-    margin-top: 100px; }
+    margin-top: 230px;
+    margin-bottom: 150px; }
     header .section-1_hea .row_hea .left_side_hea .heading-hero-homepage_hea {
       font-size: 48px;
-      line-height: 140%; }
+      line-height: 140%;
+      font-weight: 600; }
     header .section-1_hea .row_hea .left_side_hea .night40_hea {
       font-size: 19px;
       font-weight: 300; }
@@ -15671,11 +15667,21 @@ header {
       height: 30px;
       margin-right: 20px; }
   header .section-1_hea .row_hea .right_side_hea {
-    margin-top: 100px; }
+    position: relative;
+    margin-top: 230px; }
     header .section-1_hea .row_hea .right_side_hea .img_right_hea {
       width: 100%; }
+    header .section-1_hea .row_hea .right_side_hea .back-img-hea {
+      position: absolute;
+      bottom: 0px;
+      right: 0px;
+      width: 119%; }
 
 @media screen and (max-width: 1200px) {
+  body {
+    font-family: Inter,"sans-serif";
+    overflow-x: hidden;
+    background-color: #0F0D1E; }
   header {
     position: relative;
     background-color: #0F0D1E;
@@ -15684,7 +15690,8 @@ header {
       display: flex;
       flex-wrap: nowrap; }
       header .section-1_hea .row_hea .left_side_hea {
-        margin-top: 100px; }
+        margin-bottom: 200px;
+        margin-top: 230px; }
         header .section-1_hea .row_hea .left_side_hea .heading-hero-homepage_hea {
           font-size: 45px;
           line-height: 140%; }
@@ -15709,16 +15716,21 @@ header {
           height: 30px;
           margin-right: 20px; }
       header .section-1_hea .row_hea .right_side_hea {
-        margin-top: 100px; }
+        margin-bottom: 100px;
+        position: relative;
+        margin-top: 230px; }
         header .section-1_hea .row_hea .right_side_hea .img_right_hea {
-          width: 100%; } }
-
-@media screen and (max-width: 1100px) {
-  body {
-    margin: 0;
-    padding: 0; } }
+          width: 100%; }
+        header .section-1_hea .row_hea .right_side_hea .back-img-hea {
+          position: absolute;
+          bottom: 0px;
+          right: 0px; } }
 
 @media screen and (max-width: 992px) {
+  body {
+    font-family: Inter,"sans-serif";
+    overflow-x: hidden;
+    background-color: #0F0D1E; }
   header {
     position: relative;
     background-color: #0F0D1E;
@@ -15727,7 +15739,8 @@ header {
       display: flex;
       flex-wrap: wrap; }
       header .section-1_hea .row_hea .left_side_hea {
-        margin-top: 100px; }
+        margin-top: 100px;
+        margin-bottom: 200px; }
         header .section-1_hea .row_hea .left_side_hea .heading-hero-homepage_hea {
           font-size: 45px;
           line-height: 140%; }
@@ -15755,3 +15768,220 @@ header {
         margin-top: 100px; }
         header .section-1_hea .row_hea .right_side_hea .img_right_hea {
           width: 80%; } }
+
+.section-2.after_header {
+  background-color: #1B1734;
+  color: white; }
+  .section-2.after_header .ah_row1 {
+    margin-left: 20px; }
+  .section-2.after_header .heading.small {
+    margin-top: 140px;
+    font-size: 33px;
+    font-weight: 600;
+    line-height: 140%;
+    text-align: left; }
+  .section-2.after_header .paragraph {
+    margin-right: 40px;
+    padding: 0;
+    margin-top: 120px;
+    justify-content: space-between;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: left;
+    line-height: 150%; }
+  .section-2.after_header .o_p_t .section-2-secondside {
+    width: 98%;
+    background-color: #5B35D5;
+    border-radius: 16px;
+    margin-top: 150px;
+    margin-right: 20px;
+    margin-bottom: 130px; }
+    .section-2.after_header .o_p_t .section-2-secondside .left-side_sc2 {
+      padding-left: 60px;
+      padding-top: 200px; }
+    .section-2.after_header .o_p_t .section-2-secondside .heading-callout {
+      font-size: 40px;
+      font-weight: 600; }
+    .section-2.after_header .o_p_t .section-2-secondside .paragraph-left {
+      justify-content: space-between;
+      font-size: 18px;
+      font-weight: 300; }
+    .section-2.after_header .o_p_t .section-2-secondside .section-2-right-img {
+      display: inline-block;
+      width: 78%;
+      margin-left: 90px;
+      margin-top: 60px;
+      margin-bottom: 50px; }
+
+@media screen and (max-width: 1200px) {
+  .section-2.after_header .ah_row1 {
+    margin-left: 40px;
+    margin-right: 40px; }
+  .section-2.after_header .ah_col1 {
+    padding: 0; }
+  .section-2.after_header .heading.small {
+    margin-top: 140px;
+    font-size: 45px;
+    font-weight: 600;
+    line-height: 140%;
+    text-align: left; }
+  .section-2.after_header .paragraph {
+    padding: 0;
+    margin-top: 120px;
+    justify-content: space-between;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: left;
+    line-height: 150%; }
+  .section-2.after_header .o_p_t .section-2-secondside {
+    width: 98%;
+    background-color: #5B35D5;
+    border-radius: 16px;
+    margin: 0;
+    margin-top: 160px;
+    margin-bottom: 130px; }
+    .section-2.after_header .o_p_t .section-2-secondside .heading-callout {
+      font-size: 40px;
+      font-weight: 600; }
+    .section-2.after_header .o_p_t .section-2-secondside .paragraph-left {
+      justify-content: space-between;
+      font-size: 18px;
+      font-weight: 300; }
+    .section-2.after_header .o_p_t .section-2-secondside .section-2-right-img {
+      display: inline-block;
+      width: 78%;
+      height: 88%;
+      margin-left: 90px;
+      margin-top: 60px;
+      margin-bottom: 50px; } }
+
+@media screen and (max-width: 992px) {
+  .section-2.after_header .ah_row1 {
+    margin-left: 20px; }
+  .section-2.after_header .ah_col1 {
+    padding: 0; }
+  .section-2.after_header .heading.small {
+    font-size: 34px;
+    font-weight: 600; }
+  .section-2.after_header .paragraph {
+    margin-top: 120px;
+    justify-content: space-between;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: left;
+    line-height: 150%; }
+  .section-2.after_header .o_p_t .section-2-secondside {
+    width: 98%;
+    background-color: #5B35D5;
+    border-radius: 16px;
+    margin: 0;
+    margin-top: 160px;
+    margin-bottom: 130px; }
+    .section-2.after_header .o_p_t .section-2-secondside .left-side_sc2 {
+      padding-left: 30px;
+      padding-top: 60px; }
+    .section-2.after_header .o_p_t .section-2-secondside .heading-callout {
+      font-size: 27px;
+      font-weight: 600; }
+    .section-2.after_header .o_p_t .section-2-secondside .paragraph-left {
+      justify-content: space-between;
+      font-size: 18px;
+      font-weight: 300; }
+    .section-2.after_header .o_p_t .section-2-secondside .section-2-right-img {
+      display: inline-block;
+      width: 90%;
+      margin-left: 35px;
+      margin-top: 60px;
+      margin-bottom: 50px; } }
+
+@media screen and (max-width: 992px) {
+  .section-2.after_header .ah_row1 {
+    margin-left: 20px; }
+  .section-2.after_header .ah_col1 {
+    padding: 0; }
+  .section-2.after_header .heading.small {
+    font-size: 34px;
+    font-weight: 600; }
+  .section-2.after_header .paragraph {
+    margin-top: 120px;
+    justify-content: space-between;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: left;
+    line-height: 150%; }
+  .section-2.after_header .o_p_t .section-2-secondside {
+    width: 98%;
+    background-color: #5B35D5;
+    border-radius: 16px;
+    margin: 0;
+    margin-top: 160px;
+    margin-bottom: 130px; }
+    .section-2.after_header .o_p_t .section-2-secondside .left-side_sc2 {
+      padding-left: 30px;
+      padding-top: 60px; }
+    .section-2.after_header .o_p_t .section-2-secondside .heading-callout {
+      font-size: 27px;
+      font-weight: 600; }
+    .section-2.after_header .o_p_t .section-2-secondside .paragraph-left {
+      justify-content: space-between;
+      font-size: 18px;
+      font-weight: 300; }
+    .section-2.after_header .o_p_t .section-2-secondside .section-2-right-img {
+      display: inline-block;
+      width: 90%;
+      margin-left: 35px;
+      margin-top: 60px;
+      margin-bottom: 50px; } }
+
+@media screen and (max-width: 768px) {
+  .section-2.after_header .ah_row1 {
+    margin-left: 20px; }
+  .section-2.after_header .ah_col1 {
+    padding: 0; }
+  .section-2.after_header .heading.small {
+    font-size: 34px;
+    font-weight: 600; }
+  .section-2.after_header .paragraph {
+    margin-top: 120px;
+    justify-content: space-between;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: left;
+    line-height: 150%; }
+  .section-2.after_header .o_p_t .section-2-secondside {
+    width: 98%;
+    background-color: #5B35D5;
+    border-radius: 16px;
+    margin: 0;
+    margin-top: 160px;
+    margin-bottom: 130px; }
+    .section-2.after_header .o_p_t .section-2-secondside .left-side_sc2 {
+      padding-left: 30px;
+      padding-top: 60px; }
+    .section-2.after_header .o_p_t .section-2-secondside .heading-callout {
+      font-size: 32px;
+      font-weight: 600; }
+    .section-2.after_header .o_p_t .section-2-secondside .paragraph-left {
+      justify-content: space-between;
+      font-size: 18px;
+      font-weight: 300; }
+    .section-2.after_header .o_p_t .section-2-secondside .section-2-right-img {
+      display: inline-block;
+      width: 100%;
+      margin-left: 35px;
+      margin-top: 60px;
+      margin-bottom: 60px; } }
+
+.section3-four-part .section3-fr .asd_fr {
+  margin: 0 auto;
+  width: 95%;
+  background-color: #173322;
+  border-radius: 16px;
+  margin-bottom: 100px;
+  margin-top: 130px;
+  color: white; }
